--- a/style.css
+++ b/style.css
@@ -35,3 +35,25 @@ h1{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+/* Image-container */
+.image-container {
+    margin: 10px 30%;
+}
+
+.image-container img {
+    width: 100%;
+    margin-top: 10px;
+}
+
+/* Media query for smartphones */
+
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 30px;
+    }
+    .image-container {
+        margin: 10px;
+    }
+
+}
